feat: add URLs for parallel relationships and missing-linkbyid
